--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "ajv": "^6.5.3",
     "angularfire2": "^4.0.0-rc.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
-    "firebase": "^3.9.0",
+    "firebase": "^3.6.6",
+    "hoek": "^5.0.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -38,12 +42,12 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
